--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -45,3 +45,11 @@ color15              #FCE8C3
 
 # Transparency
 background_opacity 0.95
+
+# Disable annoying bell
+
+enable_audio_bell no
+
+# Terminal Font
+
+font_size 15.0
