--- a/cava/config
+++ b/cava/config
@@ -123,12 +123,13 @@ method = ncurses
 # Gradient mode, only hex defined colors are supported, background must also be defined in hex
 # or remain commented out. 1 = on, 0 = off. Warning: for certain terminal emulators cava will
 # not able to restore color definitions on exit, simply restart your terminal to restore colors.
-; gradient = 1
-; gradient_count = 2
-; gradient_color_1 = '#0099ff'
-; gradient_color_2 = '#ff3399'
-
-
+ gradient = 1
+ gradient_count = 5
+ gradient_color_1 = '#bcecfc'
+ gradient_color_2 = '#fcdce4'
+ gradient_color_3 = '#fcfbfb'
+ gradient_color_4 = '#fcdce4'
+ gradient_color_5 = '#bcecfc'
 
 [smoothing]
 
