--- a/i3/config
+++ b/i3/config
@@ -30,6 +30,9 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
+# Start dunst
+exec dunst
+
 # Start mpd
 exec mpd
 
@@ -54,10 +57,22 @@ bindsym XF86AudioNext exec --no-startup-id mpc next
 bindsym XF86AudioPrev exec --no-startup-id mpc prev
 bindsym XF86AudioStop exec --no-startup-id mpc stop
 
+# control MPD with normal keybinds
+bindsym $mod+p exec --no-startup-id mpc toggle
+bindsym $mod+b exec --no-startup-id mpc prev
+bindsym $mod+n exec --no-startup-id mpc next
+
 # lock i3 with a special key
 bindsym XF86ScreenSaver exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+# move the currently focused window to the scratchpad
+bindsym $mod+Shift+minus move scratchpad
 
+# Show the next scratchpad window or hide the focused scratchpad window
+#
+# If there are multiple scratchpad windows, this command cycles through them
+
+bindsym $mod+minus scratchpad show
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -75,10 +90,10 @@ bindsym $mod+Shift+p exec flameshot gui
 bindsym $mod+d exec rofi -combi-modi window#drun -font "Inconsolata 15" -show combi -icon-theme "ePapirus" -show-icons
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -87,10 +102,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -99,10 +114,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+# bindsym $mod+h split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+# bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -219,7 +234,8 @@ gaps outer 5
 # Bar configuration with bumblebee_status
 
 bar {
-    font pango:UbuntuMono, FontAwesome, PowerlineSymbols 12
+    i3bar_command i3bar --transparency
+    font pango:Ubuntu Mono derivative Powerline, FontAwesome, PowerlineSymbols 12
     position top
     tray_output none
     status_command bumblebee-status\
@@ -227,6 +243,8 @@ bar {
 	-p datetime.format="%a. %b %d %H:%M" nic.include="enp4s0,wlan0" nic.format="{intf}: {state}" \
 	-t gruvbox-powerline
     colors {
-        focused_workspace  #212121 #ff4081  #212121
+        background          #212121DD #212121FF
+        focused_workspace   #212121DD #ff4081FF  #212121FF
+        inactive_workspace  #212121DD #212121DD  #999999FF
     }
 }
