--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -79,7 +79,7 @@ pid_file			"~/.config/mpd/pid"
 # systemd socket activiation is in use.
 #
 # For network
-#bind_to_address		"any"
+bind_to_address		"0.0.0.0"
 #
 # And for Unix Socket
 #bind_to_address		"~/.mpd/socket"
@@ -104,7 +104,7 @@ port				"6600"
 # This setting enables MPD to create playlists in a format usable by other
 # music players.
 #
-#save_absolute_paths_in_playlists	"no"
+save_absolute_paths_in_playlists	"yes"
 #
 # This setting defines a list of tag types that will be extracted during the
 # audio file discovery process. The complete list of possible values can be
@@ -126,6 +126,11 @@ auto_update	"yes"
 auto_update_depth "3"
 #
 ###############################################################################
+
+playlist_plugin {
+    name "pls"
+    enabled "true"
+}
 
 
 # Symbolic link behavior ######################################################
@@ -163,11 +168,11 @@ zeroconf_name			"Music Player @ %h"
 # If this setting is set, MPD will require password authorization. The password
 # setting can be specified multiple times for different password profiles.
 #
-#password                        "password@read,add,control,admin"
+password                        "password@read,add,control,admin"
 #
 # This setting specifies the permissions a user has who has not yet logged in. 
 #
-#default_permissions             "read,add,control,admin"
+default_permissions             "read,add,control"
 #
 ###############################################################################
 
@@ -261,17 +266,17 @@ input {
 #
 # An example of a httpd output (built-in HTTP streaming server):
 #
-#audio_output {
-#	type		"httpd"
-#	name		"My HTTP Stream"
-#	encoder		"vorbis"		# optional, vorbis or lame
-#	port		"8000"
-#	bind_to_address	"0.0.0.0"		# optional, IPv4 or IPv6
-##	quality		"5.0"			# do not define if bitrate is defined
-#	bitrate		"128"			# do not define if quality is defined
-#	format		"44100:16:1"
-#	max_clients	"0"			# optional 0=no limit
-#}
+audio_output {
+	type		"httpd"
+	name		"Bikacast"
+	encoder		"vorbis"		# optional, vorbis or lame
+	port		"8000"
+#	bind_to_address	""		# optional, IPv4 or IPv6
+#	quality		"5.0"			# do not define if bitrate is defined
+	bitrate		"128"			# do not define if quality is defined
+	format		"44100:16:1"
+	max_clients	"0"			# optional 0=no limit
+}
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
