--- a/i3/config
+++ b/i3/config
@@ -65,6 +65,11 @@ bindsym $mod+n exec --no-startup-id mpc next
 # lock i3 with a special key
 bindsym XF86ScreenSaver exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+for_window [class="kitty"] floating enable
+for_window [class="kitty"] resize set 1200 700 
+
+
+
 # move the currently focused window to the scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
@@ -141,6 +146,7 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
+
 
 # Terminals and editors
 set $ws1 "1: "
@@ -235,7 +241,7 @@ gaps outer 5
 
 bar {
     i3bar_command i3bar --transparency
-    font pango:Ubuntu Mono derivative Powerline, FontAwesome, PowerlineSymbols 12
+    font pango:Ubuntu Mono derivative Powerline, FontAwesome, PowerlineSymbols 15
     position top
     tray_output none
     status_command bumblebee-status\
